back/src/main/java/com/example/trileucotestapp/error/PlanetNotFoundException.java
package com.example.trileucotestapp.error;

public class PlanetNotFoundException extends RuntimeException {
    public PlanetNotFoundException(String message) {
        super(message);
    }
}
